# axum-crud

./: Cargo.toml
.github/workflows/: ci.yml
src/: main.rs  price.rs
tests/: price_tests.rs
